--- a/_config.yml
+++ b/_config.yml
@@ -9,13 +9,13 @@ name:               "monk"
 
 author:
   name:             ho-il
-  facebook:         your-id
-  twitter:          your-id
+  facebook:         hackjumuck
+  # twitter:          your-id
   github:           seaunseen
-  linkedin:         your-id
-  medium:           your-id
-  tumblr:           your-id
-  email:            your-id@your-email.com
+  # linkedin:         your-id
+  # medium:           your-id
+  # tumblr:           your-id
+  email:            qqwq9999@gmail.com
 
 # Google-analytics
 google-analytics:
@@ -53,7 +53,7 @@ nav:
   - name:           "Tags"
     url:            "/tags"
   - name:           "Github"
-    url:            "https://github.com/AWEEKJ/Kiko-plus"
+    url:            "https://github.com/seaunseen"
 
 
 
