--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ author:
 
 # jekyll-seo-tag
 title: steady coding
-description: A blog dedicated to developer
+description: 제발 steady coding
 
 # Google-analytics
 google-analytics:
